    setting the environment variable NOKOGIRI_USE_SYSTEM_LIBRARIES.
  * (MRI) Update packaged libraries: libxslt to 1.1.28, zlib to 1.2.8,
    and libiconv to 1.14, respectively.
  * Nokogiri::HTML::Document#title= now always add a title element
    even if a head element is not present, trying hard to find the
    best place to put it.
  * Nokogiri::XML::DTD#html_dtd? and #html5_dtd? are added.

* Bugfixes

  * Ensure :only-child pseudo class works within :not pseudo class. #858
    (Thanks, Yamagishi Kazutoshi!)
  * Don't call pkg_config when using bundled libraries in extconf.rb
    #931 (Thanks, Shota Fukumori!)
  * Nokogiri.parse() does not mistake a non-HTML document like a RSS
    document as HTML document. #932 (Thanks, Yamagishi Kazutoshi!)


=== 1.6.0 / 2013-06-08

This release was based on v1.5.10 and 1.6.0.rc1, and contains changes
mentioned in both.

* Deprecations

  * Remove pre 1.9 monitoring from Travis.


=== 1.6.0.rc1 / 2013-04-14

This release was based on v1.5.9, and so does not contain any fixes
mentioned in the notes for v1.5.10.

* Notes

  * mini_portile is now a runtime dependency
  * Ruby 1.9.2 and higher now required


* Features

  * (MRI) Source code for libxml 2.8.0 and libxslt 1.2.26 is packaged
    with the gem. These libraries are compiled at gem install time
    unless the environment variable NOKOGIRI_USE_SYSTEM_LIBRARIES is
    set. VERSION_INFO (also `nokogiri -v`) exposes whether libxml was
    compiled from packaged source, or the system library was used.
  * (Windows) libxml upgraded to 2.8.0


* Deprecations

  * Support for Ruby 1.8.7 and prior has been dropped


=== 1.5.10 / 2013-06-07

* Bugfixes

  * (JRuby) Fix "null document" error when parsing an empty IO in jruby 1.7.3. #883
  * (JRuby) Fix schema validation when XSD has DOCTYPE set to DTD. #912 (Thanks, Patrick Cheng!)
  * (MRI) Fix segfault when there is no default subelement for an HTML node. #917


* Notes
